<navigation xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/main_navigation" app:startDestination="@id/login">
<fragment android:id="@+id/login" android:name="com.example.superkingsale.ui.LoginFragment" android:label="Sign in"><argument android:name="screen" app:argType="string" android:defaultValue="login" /><argument android:name="recordId" app:argType="long" android:defaultValue="0L" /></fragment>
<fragment android:id="@+id/home" android:name="com.example.superkingsale.ui.WorkspaceFragment" android:label="Home"><argument android:name="screen" app:argType="string" android:defaultValue="home" /><argument android:name="recordId" app:argType="long" android:defaultValue="0L" /></fragment>
<fragment android:id="@+id/trip" android:name="com.example.superkingsale.ui.WorkspaceFragment" android:label="Current trip"><argument android:name="screen" app:argType="string" android:defaultValue="trip" /><argument android:name="recordId" app:argType="long" android:defaultValue="0L" /></fragment>
<fragment android:id="@+id/new_sale" android:name="com.example.superkingsale.ui.SaleFragment" android:label="New sale"><argument android:name="screen" app:argType="string" android:defaultValue="new_sale" /><argument android:name="recordId" app:argType="long" android:defaultValue="0L" /></fragment>
<fragment android:id="@+id/sales" android:name="com.example.superkingsale.ui.WorkspaceFragment" android:label="Sales"><argument android:name="screen" app:argType="string" android:defaultValue="sales" /><argument android:name="recordId" app:argType="long" android:defaultValue="0L" /></fragment>
<fragment android:id="@+id/cash" android:name="com.example.superkingsale.ui.WorkspaceFragment" android:label="Cash hold"><argument android:name="screen" app:argType="string" android:defaultValue="cash" /><argument android:name="recordId" app:argType="long" android:defaultValue="0L" /></fragment>
<fragment android:id="@+id/stock" android:name="com.example.superkingsale.ui.WorkspaceFragment" android:label="My stock"><argument android:name="screen" app:argType="string" android:defaultValue="stock" /><argument android:name="recordId" app:argType="long" android:defaultValue="0L" /></fragment>
<fragment android:id="@+id/receiving" android:name="com.example.superkingsale.ui.WorkspaceFragment" android:label="Receiving"><argument android:name="screen" app:argType="string" android:defaultValue="receiving" /><argument android:name="recordId" app:argType="long" android:defaultValue="0L" /></fragment>
<fragment android:id="@+id/sale_detail" android:name="com.example.superkingsale.ui.WorkspaceFragment" android:label="Sale details"><argument android:name="screen" app:argType="string" android:defaultValue="sale_detail" /><argument android:name="recordId" app:argType="long" android:defaultValue="0L" /></fragment>
<fragment android:id="@+id/customers" android:name="com.example.superkingsale.ui.WorkspaceFragment" android:label="Customers"><argument android:name="screen" app:argType="string" android:defaultValue="customers" /><argument android:name="recordId" app:argType="long" android:defaultValue="0L" /></fragment>
<fragment android:id="@+id/customer_new" android:name="com.example.superkingsale.ui.WorkspaceFragment" android:label="New customer"><argument android:name="screen" app:argType="string" android:defaultValue="customer_new" /><argument android:name="recordId" app:argType="long" android:defaultValue="0L" /></fragment>
<fragment android:id="@+id/profile" android:name="com.example.superkingsale.ui.WorkspaceFragment" android:label="Profile and settings"><argument android:name="screen" app:argType="string" android:defaultValue="profile" /><argument android:name="recordId" app:argType="long" android:defaultValue="0L" /></fragment>
</navigation>

